--- a/OfficeRoomie/Views/Home/Index.cshtml
+++ b/OfficeRoomie/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = "/Views/Layouts/_Dashboard.cshtml";
+    ViewData["Title"] = "Página Inicial";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome 3</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Home</h1>
