--- a/OfficeRoomie/wwwroot/css/site.css
+++ b/OfficeRoomie/wwwroot/css/site.css
@@ -1,22 +1,18 @@
-html {
-  font-size: 14px;
+*::-webkit-scrollbar {
+  background-color: white;
+  width: 16px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+*::-webkit-scrollbar-track {
+  background-color: white;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+*::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid white;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+*::-webkit-scrollbar-button {
+  display: none;
 }
