--- a/OfficeRoomie/Views/Layouts/_Dashboard.cshtml
+++ b/OfficeRoomie/Views/Layouts/_Dashboard.cshtml
@@ -18,7 +18,7 @@
 
             <div class="w-full h-[calc(100vh-100px)] overflow-y-auto">
                 <ul>
-                    <li><a href="">ASIDE LINK</a></li>
+                    <li><a href="/administrador">Administrador</a></li>
                     <li><a href="">ASIDE LINK</a></li>
                     <li><a href="">ASIDE LINK</a></li>
                     <li><a href="">ASIDE LINK</a></li>
@@ -34,7 +34,7 @@
 
                 <div class="flex gap-2 items-center">
                     <span class="text-sm">Olá, @User?.Identity?.Name</span>
-                    <a href="" title="Logout">
+                    <a href="/auth/logout" title="Logout">
                         <span class="iconify" data-icon="ic:baseline-login" data-inline="false"></span>
                     </a>
                 </div>
